--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -231,7 +231,7 @@
       </div>
       <div class="modal-body">
         <h2 id="bestFriendName"></h2>
-        <img id="bestFriendImg" src="https://scontent-dfw1-1.xx.fbcdn.net/t31.0-8/13116244_10107568960519320_7024834722285826624_o.jpg" onError="this.src='https://answers.atlassian.com/images/icons/profilepics/default.png'" width=500px alt="Best Friend">
+        <img id="bestFriendImg" src="" width=500px alt="Best Friend">
       </div>
     </div>
   </div>
