--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,9 +25,9 @@ Then find the friend with the greatest compatibility!</h2>
 
     </div>
 
-    <footer class="footer">
+   <footer class="footer">
       <div class="container">
-        <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a> | <a href="https://github.com/afhaque/HotRestaurant">GitHub Repo</a></p>
+        <p><a href="/api/friends">Friends</a> | <a href="https://github.com/lavanya128/FriendFinder">Friend Finder Repo</a></p>
       </div>
     </footer>
 
