--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -19,7 +19,6 @@
       <div class="row">
       <div class="col-lg-12">
 
-        <!-- Reservation Page -->
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">Survey Questions</h4>
@@ -216,7 +215,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a> | <a href="https://github.com/afhaque/HotRestaurant">GitHub Repo</a></p>
+        <p><a href="/api/friends">Friends</a> | <a href="https://github.com/lavanya128/FriendFinder">Friend Finder Repo</a></p>
       </div>
     </footer>
 
@@ -270,29 +269,7 @@
 
       console.log(userData);
 
-      // $.post("/api/friends", userData)
-      // .done(function(data) {
-
-      //     $("#fMatch").show();
-      //     $("#FriendName").text(data.name);
-      //     $("#FriendImg").attr("src", data.photo);
-          
-      //      // Clear the form when submitting
-      //     $("#name").val("");
-      //     $("#photo").val("");
-      //     $("#q1").val("");
-      //     $("#q2").val("");
-      //     $("#q3").val("");
-      //     $("#q4").val("");
-      //     $("#q5").val("");
-      //     $("#q6").val("");
-      //     $("#q7").val("");
-      //     $("#q8").val("");
-      //     $("#q9").val("");
-      //     $("#q10").val("");
-      //   });
-
-var currentURL = window.location.origin;
+      var currentURL = window.location.origin;
     $.post(currentURL + '/api/friends', userData, function(data) {
       $("#bestFriendName").text(data.name);
       $("#bestFriendImg").attr("src", data.photo);
